# DOCUMENTMANAGMENTSYSTEM

./: .gitignore  .replit  MIGRAZIONE_DA_REPLIT.md  README.md  app.py  company_routes.py  dependencies.txt  fix_truncation.py  main.py  migrate_activity_log.py  migrate_to_central_storage.py  migrate_to_permanent_storage.py  migration_report_20250502_162841.txt  models.py  prepare_for_github.py  pyproject.toml  remove_is_archived.py  replit.nix  reset_db.py  routes.py  routes_maintenance.py  simplified_models.py
document_cache/: Pasted-1-creare-i-profili-di-accesso-User-e-Password-per-ciascuna-persona-ed-impostare-i-livelli-di-acce-1744577638274.txt
permanent_storage/: storage_index.json
services/: ai_classifier.py  audit_service.py  central_storage.py  document_monitor.py  document_processor.py  document_service.py  email_service.py  file_recovery.py  ocr.py  openai_service.py  persistent_storage.py  reminder_service.py  search.py  simple_document_storage.py  simple_storage.py  workflow.py
templates/: 404.html  500.html  activity_log.html  add_reminder.html  archived_documents.html  companies.html  company_detail.html  company_users.html  confirm_delete.html  confirm_delete_folder.html  confirm_multiple_delete.html  create_company.html  create_folder.html  create_workflow.html  dashboard.html  document_attachments.html  documents.html  folder_detail.html  folder_permissions.html  layout.html  login.html  manage_tags.html  notifications.html  register.html  reminders.html  search.html  settings.html  update_company.html  update_document.html  update_folder.html  (+5 more)
(+19 files in other folders)
